Updates for Sphinx version, copyright year, git tag
- Also updates documentation for all Thetis PRs since last website update for index and documentation etc.

--- a/_modules/thetis/coordsys.html
+++ b/_modules/thetis/coordsys.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.coordsys &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <title>thetis.coordsys &#8212; Thetis 0+untagged.2057.gbb0d01b.dirty documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
-    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/documentation_options.js?v=05ff3d8c"></script>
+    <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
@@ -53,17 +53,17 @@
 <span class="sd">Generic methods for converting data between different spatial coordinate systems.</span>
 <span class="sd">Uses pyproj library.</span>
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">import</span> <span class="nn">firedrake</span> <span class="k">as</span> <span class="nn">fd</span>
-<span class="kn">import</span> <span class="nn">pyproj</span>
-<span class="kn">import</span> <span class="nn">numpy</span>
-<span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">ABC</span><span class="p">,</span> <span class="n">abstractmethod</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">firedrake</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">fd</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">pyproj</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">numpy</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">abc</span><span class="w"> </span><span class="kn">import</span> <span class="n">ABC</span><span class="p">,</span> <span class="n">abstractmethod</span>
 
 <span class="n">LL_WGS84</span> <span class="o">=</span> <span class="n">pyproj</span><span class="o">.</span><span class="n">Proj</span><span class="p">(</span><span class="n">proj</span><span class="o">=</span><span class="s1">&#39;latlong&#39;</span><span class="p">,</span> <span class="n">datum</span><span class="o">=</span><span class="s1">&#39;WGS84&#39;</span><span class="p">,</span> <span class="n">errcheck</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 
 
 <div class="viewcode-block" id="CoordinateSystem">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem">[docs]</a>
-<span class="k">class</span> <span class="nc">CoordinateSystem</span><span class="p">(</span><span class="n">ABC</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">CoordinateSystem</span><span class="p">(</span><span class="n">ABC</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Base class for horizontal coordinate systems</span>
 
@@ -72,7 +72,7 @@
 <div class="viewcode-block" id="CoordinateSystem.to_lonlat">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem.to_lonlat">[docs]</a>
     <span class="nd">@abstractmethod</span>
-    <span class="k">def</span> <span class="nf">to_lonlat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">to_lonlat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Convert coordinates to latitude and longitude&quot;&quot;&quot;</span>
         <span class="k">pass</span></div>
 
@@ -80,7 +80,7 @@
 <div class="viewcode-block" id="CoordinateSystem.get_vector_rotator">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.CoordinateSystem.get_vector_rotator">[docs]</a>
     <span class="nd">@abstractmethod</span>
-    <span class="k">def</span> <span class="nf">get_vector_rotator</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">get_vector_rotator</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns a vector rotator object.</span>
 
@@ -94,7 +94,7 @@
 
 <div class="viewcode-block" id="proj_transform">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.proj_transform">[docs]</a>
-<span class="k">def</span> <span class="nf">proj_transform</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">trans</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">proj_transform</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">trans</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Transform coordinates from source to target system.</span>
 
@@ -120,13 +120,13 @@
 
 <div class="viewcode-block" id="UTMCoordinateSystem">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem">[docs]</a>
-<span class="k">class</span> <span class="nc">UTMCoordinateSystem</span><span class="p">(</span><span class="n">CoordinateSystem</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">UTMCoordinateSystem</span><span class="p">(</span><span class="n">CoordinateSystem</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents Universal Transverse Mercator coordinate systems</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">utm_zone</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">utm_zone</span><span class="p">,</span> <span class="n">south</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">proj_obj</span> <span class="o">=</span> <span class="n">pyproj</span><span class="o">.</span><span class="n">Proj</span><span class="p">(</span><span class="n">proj</span><span class="o">=</span><span class="s1">&#39;utm&#39;</span><span class="p">,</span> <span class="n">zone</span><span class="o">=</span><span class="n">utm_zone</span><span class="p">,</span> <span class="n">datum</span><span class="o">=</span><span class="s1">&#39;WGS84&#39;</span><span class="p">,</span>
-                                    <span class="n">units</span><span class="o">=</span><span class="s1">&#39;m&#39;</span><span class="p">,</span> <span class="n">errcheck</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+                                    <span class="n">units</span><span class="o">=</span><span class="s1">&#39;m&#39;</span><span class="p">,</span> <span class="n">errcheck</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">south</span><span class="o">=</span><span class="n">south</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">transformer_lonlat</span> <span class="o">=</span> <span class="n">pyproj</span><span class="o">.</span><span class="n">Transformer</span><span class="o">.</span><span class="n">from_crs</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">proj_obj</span><span class="o">.</span><span class="n">srs</span><span class="p">,</span> <span class="n">LL_WGS84</span><span class="o">.</span><span class="n">srs</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">transformer_xy</span> <span class="o">=</span> <span class="n">pyproj</span><span class="o">.</span><span class="n">Transformer</span><span class="o">.</span><span class="n">from_crs</span><span class="p">(</span>
@@ -134,7 +134,7 @@
 
 <div class="viewcode-block" id="UTMCoordinateSystem.to_lonlat">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.to_lonlat">[docs]</a>
-    <span class="k">def</span> <span class="nf">to_lonlat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">positive_lon</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">to_lonlat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">positive_lon</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Convert (x, y) coordinates to (latitude, longitude)</span>
 
@@ -153,7 +153,7 @@
 
 <div class="viewcode-block" id="UTMCoordinateSystem.to_xy">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.to_xy">[docs]</a>
-    <span class="k">def</span> <span class="nf">to_xy</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">to_xy</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Convert (latitude, longitude) coordinates to (x, y)</span>
 
@@ -169,7 +169,7 @@
 
 <div class="viewcode-block" id="UTMCoordinateSystem.get_mesh_lonlat_function">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.get_mesh_lonlat_function">[docs]</a>
-    <span class="k">def</span> <span class="nf">get_mesh_lonlat_function</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">mesh2d</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">get_mesh_lonlat_function</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">mesh2d</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Construct a :class:`Function` holding the mesh coordinates in</span>
 <span class="sd">        longitude-latitude coordinates.</span>
@@ -192,7 +192,7 @@
 
 <div class="viewcode-block" id="UTMCoordinateSystem.get_vector_rotator">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.UTMCoordinateSystem.get_vector_rotator">[docs]</a>
-    <span class="k">def</span> <span class="nf">get_vector_rotator</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">get_vector_rotator</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lon</span><span class="p">,</span> <span class="n">lat</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns a vector rotator object.</span>
 
@@ -206,7 +206,7 @@
 
 <div class="viewcode-block" id="get_vector_rotation_matrix">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.get_vector_rotation_matrix">[docs]</a>
-<span class="k">def</span> <span class="nf">get_vector_rotation_matrix</span><span class="p">(</span><span class="n">trans</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">delta</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">get_vector_rotation_matrix</span><span class="p">(</span><span class="n">trans</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">delta</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Estimate rotation matrix that converts vectors defined in source_sys to</span>
 <span class="sd">    target_sys. Conversion is carried out by the given `trans` object.</span>
@@ -243,13 +243,13 @@
 
 <div class="viewcode-block" id="VectorCoordSysRotation">
 <a class="viewcode-back" href="../../thetis.html#thetis.coordsys.VectorCoordSysRotation">[docs]</a>
-<span class="k">class</span> <span class="nc">VectorCoordSysRotation</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">VectorCoordSysRotation</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Rotates vectors defined in source_sys coordinates to a different coordinate</span>
 <span class="sd">    system.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">trans</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">trans</span><span class="p">,</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg trans: pyproj.Transformer object, maps from source to destination system</span>
 <span class="sd">        :arg x, y: coordinates in the source coordinate system</span>
@@ -258,7 +258,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">rotation_sin</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">sin</span><span class="p">(</span><span class="n">theta</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">rotation_cos</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">cos</span><span class="p">(</span><span class="n">theta</span><span class="p">)</span>
 
-    <span class="k">def</span> <span class="fm">__call__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">v_x</span><span class="p">,</span> <span class="n">v_y</span><span class="p">,</span> <span class="n">i_node</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__call__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">v_x</span><span class="p">,</span> <span class="n">v_y</span><span class="p">,</span> <span class="n">i_node</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Rotate vectors defined by the `v_x` and `v_y` components.</span>
 
@@ -283,8 +283,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
+    &#169; Copyright 2016-2025, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.1.3.
     </div>
   </body>
 </html>
