--- a/_modules/thetis/log.html
+++ b/_modules/thetis/log.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.log &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <title>thetis.log &#8212; Thetis 0+untagged.2057.gbb0d01b.dirty documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
-    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/documentation_options.js?v=05ff3d8c"></script>
+    <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
@@ -60,11 +60,11 @@
 <span class="sd">Debug, warning etc. messages are issued with :func:`~.debug`, :func:`~.info`,</span>
 <span class="sd">:func:`~.warning`, :func:`~.error`, :func:`~.critical` methods.</span>
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">thetis.utility</span> <span class="kn">import</span> <span class="n">COMM_WORLD</span>
-<span class="kn">import</span> <span class="nn">logging</span>
-<span class="kn">from</span> <span class="nn">logging</span> <span class="kn">import</span> <span class="n">DEBUG</span><span class="p">,</span> <span class="n">INFO</span><span class="p">,</span> <span class="n">WARNING</span><span class="p">,</span> <span class="n">ERROR</span><span class="p">,</span> <span class="n">CRITICAL</span>
-<span class="kn">import</span> <span class="nn">os</span>
-<span class="kn">import</span> <span class="nn">io</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">thetis.utility</span><span class="w"> </span><span class="kn">import</span> <span class="n">COMM_WORLD</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">logging</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">logging</span><span class="w"> </span><span class="kn">import</span> <span class="n">DEBUG</span><span class="p">,</span> <span class="n">INFO</span><span class="p">,</span> <span class="n">WARNING</span><span class="p">,</span> <span class="n">ERROR</span><span class="p">,</span> <span class="n">CRITICAL</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">os</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">io</span>
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;logger&#39;</span><span class="p">,</span> <span class="s1">&#39;output_logger&#39;</span><span class="p">,</span>
            <span class="s1">&#39;DEBUG&#39;</span><span class="p">,</span> <span class="s1">&#39;INFO&#39;</span><span class="p">,</span> <span class="s1">&#39;WARNING&#39;</span><span class="p">,</span> <span class="s1">&#39;ERROR&#39;</span><span class="p">,</span> <span class="s1">&#39;CRITICAL&#39;</span><span class="p">,</span>
@@ -78,7 +78,7 @@
 <span class="p">}</span>
 
 
-<span class="k">class</span> <span class="nc">ThetisLogConfig</span><span class="p">:</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">ThetisLogConfig</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Module-wide config object&quot;&quot;&quot;</span>
     <span class="n">filename</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">mem_buffer</span> <span class="o">=</span> <span class="kc">None</span>
@@ -87,20 +87,20 @@
 <span class="n">thetis_log_config</span> <span class="o">=</span> <span class="n">ThetisLogConfig</span><span class="p">()</span>
 
 
-<span class="k">class</span> <span class="nc">BufferHandler</span><span class="p">(</span><span class="n">logging</span><span class="o">.</span><span class="n">StreamHandler</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">BufferHandler</span><span class="p">(</span><span class="n">logging</span><span class="o">.</span><span class="n">StreamHandler</span><span class="p">):</span>
     <span class="k">pass</span>
 
 
 <div class="viewcode-block" id="set_thetis_loggers">
 <a class="viewcode-back" href="../../thetis.html#thetis.log.set_thetis_loggers">[docs]</a>
-<span class="k">def</span> <span class="nf">set_thetis_loggers</span><span class="p">(</span><span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">set_thetis_loggers</span><span class="p">(</span><span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Set stream handlers for log messages.</span>
 
 <span class="sd">    :kwarg comm: The communicator the handler should be collective</span>
 <span class="sd">         over. Only rank-0 on that communicator will write to the log, other</span>
 <span class="sd">         ranks will use a :class:`logging.NullHandler`.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">add_stream_handler</span><span class="p">(</span><span class="n">buffered</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">add_stream_handler</span><span class="p">(</span><span class="n">buffered</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">comm</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">or</span> <span class="n">comm</span><span class="o">.</span><span class="n">rank</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">buffered</span><span class="p">:</span>
                 <span class="n">handler</span> <span class="o">=</span> <span class="n">BufferHandler</span><span class="p">(</span><span class="n">thetis_log_config</span><span class="o">.</span><span class="n">mem_buffer</span><span class="p">)</span>
@@ -127,7 +127,7 @@
 
 <div class="viewcode-block" id="set_log_directory">
 <a class="viewcode-back" href="../../thetis.html#thetis.log.set_log_directory">[docs]</a>
-<span class="k">def</span> <span class="nf">set_log_directory</span><span class="p">(</span><span class="n">output_directory</span><span class="p">,</span> <span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;w&#39;</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">set_log_directory</span><span class="p">(</span><span class="n">output_directory</span><span class="p">,</span> <span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;w&#39;</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Forward all log output to `output_directory/log` file.</span>
 
@@ -144,7 +144,7 @@
 <span class="sd">    :kwarg mode: write mode, &#39;w&#39; removes previous log file (if any), otherwise</span>
 <span class="sd">        appends to it. Default: &#39;w&#39;.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">create_directory</span><span class="p">(</span><span class="nb">dir</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">create_directory</span><span class="p">(</span><span class="nb">dir</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">comm</span><span class="o">.</span><span class="n">rank</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="nb">dir</span><span class="p">):</span>
                 <span class="k">if</span> <span class="ow">not</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">isdir</span><span class="p">(</span><span class="nb">dir</span><span class="p">):</span>
@@ -152,20 +152,20 @@
             <span class="k">else</span><span class="p">:</span>
                 <span class="n">os</span><span class="o">.</span><span class="n">makedirs</span><span class="p">(</span><span class="nb">dir</span><span class="p">)</span>
 
-    <span class="k">def</span> <span class="nf">rm_handlers</span><span class="p">(</span><span class="bp">cls</span><span class="o">=</span><span class="n">logging</span><span class="o">.</span><span class="n">FileHandler</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">rm_handlers</span><span class="p">(</span><span class="bp">cls</span><span class="o">=</span><span class="n">logging</span><span class="o">.</span><span class="n">FileHandler</span><span class="p">):</span>
         <span class="k">for</span> <span class="n">name</span> <span class="ow">in</span> <span class="n">logger_format</span><span class="p">:</span>
             <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="n">name</span><span class="p">)</span>
             <span class="k">for</span> <span class="n">handler</span> <span class="ow">in</span> <span class="n">logger</span><span class="o">.</span><span class="n">handlers</span><span class="p">:</span>
                 <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">handler</span><span class="p">,</span> <span class="bp">cls</span><span class="p">):</span>
                     <span class="n">logger</span><span class="o">.</span><span class="n">removeHandler</span><span class="p">(</span><span class="n">handler</span><span class="p">)</span>
 
-    <span class="k">def</span> <span class="nf">rm_file_handlers</span><span class="p">():</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">rm_file_handlers</span><span class="p">():</span>
         <span class="n">rm_handlers</span><span class="p">(</span><span class="bp">cls</span><span class="o">=</span><span class="n">logging</span><span class="o">.</span><span class="n">FileHandler</span><span class="p">)</span>
 
-    <span class="k">def</span> <span class="nf">rm_buf_handlers</span><span class="p">():</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">rm_buf_handlers</span><span class="p">():</span>
         <span class="n">rm_handlers</span><span class="p">(</span><span class="bp">cls</span><span class="o">=</span><span class="n">BufferHandler</span><span class="p">)</span>
 
-    <span class="k">def</span> <span class="nf">assign_file_handler</span><span class="p">(</span><span class="n">logfile</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">assign_file_handler</span><span class="p">(</span><span class="n">logfile</span><span class="p">):</span>
 
         <span class="k">for</span> <span class="n">name</span><span class="p">,</span> <span class="n">fmt</span> <span class="ow">in</span> <span class="n">logger_format</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="n">name</span><span class="p">)</span>
@@ -205,7 +205,7 @@
 
 <div class="viewcode-block" id="thetis_log_level">
 <a class="viewcode-back" href="../../thetis.html#thetis.log.thetis_log_level">[docs]</a>
-<span class="k">def</span> <span class="nf">thetis_log_level</span><span class="p">(</span><span class="n">level</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">thetis_log_level</span><span class="p">(</span><span class="n">level</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Set the log level for Thetis logger.</span>
 
 <span class="sd">    This controls what level of logging messages are printed to</span>
@@ -242,8 +242,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
+    &#169; Copyright 2016-2025, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.1.3.
     </div>
   </body>
 </html>
