--- a/_modules/thetis/tracer_eq.html
+++ b/_modules/thetis/tracer_eq.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.tracer_eq &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <title>thetis.tracer_eq &#8212; Thetis 0+untagged.2057.gbb0d01b.dirty documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=47a7fef3"></script>
-    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/documentation_options.js?v=05ff3d8c"></script>
+    <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
@@ -66,8 +66,8 @@
 <span class="sd">:math:`w` are the horizontal and vertical velocities, respectively, and</span>
 <span class="sd">:math:`\mu_h` and :math:`\mu` denote horizontal and vertical diffusivity.</span>
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">.utility</span> <span class="kn">import</span> <span class="o">*</span>
-<span class="kn">from</span> <span class="nn">.equation</span> <span class="kn">import</span> <span class="n">Term</span><span class="p">,</span> <span class="n">Equation</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">.utility</span><span class="w"> </span><span class="kn">import</span> <span class="o">*</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">.equation</span><span class="w"> </span><span class="kn">import</span> <span class="n">Term</span><span class="p">,</span> <span class="n">Equation</span>
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s1">&#39;TracerEquation&#39;</span><span class="p">,</span>
@@ -82,12 +82,12 @@
 
 <div class="viewcode-block" id="TracerTerm">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.TracerTerm">[docs]</a>
-<span class="k">class</span> <span class="nc">TracerTerm</span><span class="p">(</span><span class="n">Term</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">TracerTerm</span><span class="p">(</span><span class="n">Term</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic tracer term that provides commonly used members and mapping for</span>
 <span class="sd">    boundary functions.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span>
                  <span class="n">bathymetry</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">v_elem_size</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">h_elem_size</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">use_symmetric_surf_bnd</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">),</span>
@@ -129,7 +129,7 @@
 
 <div class="viewcode-block" id="TracerTerm.get_bnd_functions">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.TracerTerm.get_bnd_functions">[docs]</a>
-    <span class="k">def</span> <span class="nf">get_bnd_functions</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">c_in</span><span class="p">,</span> <span class="n">uv_in</span><span class="p">,</span> <span class="n">elev_in</span><span class="p">,</span> <span class="n">bnd_id</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">get_bnd_functions</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">c_in</span><span class="p">,</span> <span class="n">uv_in</span><span class="p">,</span> <span class="n">elev_in</span><span class="p">,</span> <span class="n">bnd_id</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns external values of tracer and uv for all supported</span>
 <span class="sd">        boundary conditions.</span>
@@ -174,7 +174,7 @@
 
 <div class="viewcode-block" id="HorizontalAdvectionTerm">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.HorizontalAdvectionTerm">[docs]</a>
-<span class="k">class</span> <span class="nc">HorizontalAdvectionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">HorizontalAdvectionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Horizontal advection term :math:`\nabla_h \cdot (\textbf{u} T)`</span>
 
@@ -197,7 +197,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 <div class="viewcode-block" id="HorizontalAdvectionTerm.residual">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.HorizontalAdvectionTerm.residual">[docs]</a>
-    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">fields_old</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;uv_3d&#39;</span><span class="p">)</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">0</span>
         <span class="n">elev</span> <span class="o">=</span> <span class="n">fields_old</span><span class="p">[</span><span class="s1">&#39;elev_3d&#39;</span><span class="p">]</span>
@@ -254,7 +254,7 @@
 
 <div class="viewcode-block" id="VerticalAdvectionTerm">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.VerticalAdvectionTerm">[docs]</a>
-<span class="k">class</span> <span class="nc">VerticalAdvectionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">VerticalAdvectionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Vertical advection term :math:`\partial (w T)/(\partial z)`</span>
 
@@ -277,7 +277,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 <div class="viewcode-block" id="VerticalAdvectionTerm.residual">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.VerticalAdvectionTerm.residual">[docs]</a>
-    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">w</span> <span class="o">=</span> <span class="n">fields_old</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;w&#39;</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">w</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">0</span>
@@ -309,7 +309,7 @@
 
 <div class="viewcode-block" id="HorizontalDiffusionTerm">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.HorizontalDiffusionTerm">[docs]</a>
-<span class="k">class</span> <span class="nc">HorizontalDiffusionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">HorizontalDiffusionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Horizontal diffusion term :math:`-\nabla_h \cdot (\mu_h \nabla_h T)`</span>
 
@@ -334,7 +334,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 <div class="viewcode-block" id="HorizontalDiffusionTerm.residual">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.HorizontalDiffusionTerm.residual">[docs]</a>
-    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">fields_old</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;diffusivity_h&#39;</span><span class="p">)</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">0</span>
         <span class="n">diffusivity_h</span> <span class="o">=</span> <span class="n">fields_old</span><span class="p">[</span><span class="s1">&#39;diffusivity_h&#39;</span><span class="p">]</span>
@@ -379,7 +379,7 @@
 
 <div class="viewcode-block" id="VerticalDiffusionTerm">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.VerticalDiffusionTerm">[docs]</a>
-<span class="k">class</span> <span class="nc">VerticalDiffusionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">VerticalDiffusionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Vertical diffusion term :math:`-\frac{\partial}{\partial z} \Big(\mu \frac{T}{\partial z}\Big)`</span>
 
@@ -402,7 +402,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 <div class="viewcode-block" id="VerticalDiffusionTerm.residual">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.VerticalDiffusionTerm.residual">[docs]</a>
-    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">fields_old</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;diffusivity_v&#39;</span><span class="p">)</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">0</span>
 
@@ -441,7 +441,7 @@
 
 <div class="viewcode-block" id="SourceTerm">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.SourceTerm">[docs]</a>
-<span class="k">class</span> <span class="nc">SourceTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">SourceTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic source term</span>
 
@@ -454,7 +454,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 <div class="viewcode-block" id="SourceTerm.residual">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.SourceTerm.residual">[docs]</a>
-    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">f</span> <span class="o">=</span> <span class="mi">0</span>
         <span class="n">source</span> <span class="o">=</span> <span class="n">fields_old</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;source&#39;</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">source</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
@@ -466,11 +466,11 @@
 
 <div class="viewcode-block" id="TracerEquation">
 <a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.TracerEquation">[docs]</a>
-<span class="k">class</span> <span class="nc">TracerEquation</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">TracerEquation</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    3D tracer advection-diffusion equation :eq:`tracer_eq` in conservative form</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span>
                  <span class="n">bathymetry</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">v_elem_size</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">h_elem_size</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">use_symmetric_surf_bnd</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">10.0</span><span class="p">),</span>
@@ -509,8 +509,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
+    &#169; Copyright 2016-2025, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.1.3.
     </div>
   </body>
 </html>
