--- a/genindex.html
+++ b/genindex.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
+    <title>Index &#8212; Thetis 0+untagged.2054.ge07ddf2 documentation</title>
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css?v=0f3339d6" />
-    <script src="_static/documentation_options.js?v=47a7fef3"></script>
-    <script src="_static/doctools.js?v=888ff710"></script>
+    <script src="_static/documentation_options.js?v=70f0a730"></script>
+    <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
@@ -947,6 +947,8 @@
       <li><a href="thetis.html#thetis.turbines.DiscreteTidalTurbineFarm">DiscreteTidalTurbineFarm (class in thetis.turbines)</a>
 </li>
       <li><a href="thetis.html#thetis.options.DiscreteTidalTurbineFarmOptions">DiscreteTidalTurbineFarmOptions (class in thetis.options)</a>
+</li>
+      <li><a href="thetis.html#thetis.utility.domain_constant">domain_constant() (in module thetis.utility)</a>
 </li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.dt">dt (thetis.solver.FlowSolver attribute)</a>
 
@@ -2135,10 +2137,22 @@
       </ul></li>
       <li><a href="thetis.html#thetis.turbines.TidalTurbine.power">power() (thetis.turbines.TidalTurbine method)</a>
 </li>
+      <li><a href="thetis.html#thetis.options.ConstantTidalTurbineOptions.power_coefficient">power_coefficient (thetis.options.ConstantTidalTurbineOptions attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.turbines.ConstantThrustTurbine.power_coefficient">power_coefficient() (thetis.turbines.ConstantThrustTurbine method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.turbines.TabulatedThrustTurbine.power_coefficient">(thetis.turbines.TabulatedThrustTurbine method)</a>
+</li>
+      </ul></li>
+      <li><a href="thetis.html#thetis.options.TabulatedTidalTurbineOptions.power_coefficients">power_coefficients (thetis.options.TabulatedTidalTurbineOptions attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.turbines.TidalTurbineFarm.power_output">power_output() (thetis.turbines.TidalTurbineFarm method)</a>
 </li>
       <li><a href="thetis.html#thetis.timeintegrator.LeapFrogAM3.predict">predict() (thetis.timeintegrator.LeapFrogAM3 method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.timeintegrator.SSPRK22ALE.prepare_stage">prepare_stage() (thetis.timeintegrator.SSPRK22ALE method)</a>
 </li>
       <li><a href="thetis.html#thetis.turbulence.GenericLengthScaleModel.preprocess">preprocess() (thetis.turbulence.GenericLengthScaleModel method)</a>
@@ -2149,8 +2163,6 @@
         <li><a href="thetis.html#thetis.turbulence.TurbulenceModel.preprocess">(thetis.turbulence.TurbulenceModel method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.momentum_eq.PressureGradientTerm">PressureGradientTerm (class in thetis.momentum_eq)</a>
 </li>
       <li><a href="thetis.html#thetis.timeintegrator.PressureProjectionPicard">PressureProjectionPicard (class in thetis.timeintegrator)</a>
@@ -2174,6 +2186,8 @@
       <li><a href="thetis.html#thetis.coordsys.proj_transform">proj_transform() (in module thetis.coordsys)</a>
 </li>
       <li><a href="thetis.html#thetis.utility.SubdomainProjector.project">project() (thetis.utility.SubdomainProjector method)</a>
+</li>
+      <li><a href="thetis.html#thetis.options.TidalTurbineOptions.projected_diameter">projected_diameter (thetis.options.TidalTurbineOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.GLSModelOptions.psi_min">psi_min (thetis.options.GLSModelOptions attribute)</a>
 </li>
@@ -3370,6 +3384,8 @@
 </li>
       <li><a href="thetis.html#thetis.callback.VolumeConservation3DCallback">VolumeConservation3DCallback (class in thetis.callback)</a>
 </li>
+      <li><a href="thetis.html#thetis.utility.vom_interpolator_functions">vom_interpolator_functions() (in module thetis.utility)</a>
+</li>
       <li><a href="thetis.html#thetis.diagnostics.VorticityCalculator2D">VorticityCalculator2D (class in thetis.diagnostics)</a>
 </li>
       <li><a href="thetis.html#thetis.exporter.VTKExporter">VTKExporter (class in thetis.exporter)</a>
@@ -3409,8 +3425,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
+    &#169; Copyright 2016-2025, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.1.3.
     </div>
   </body>
 </html>
