--- a/model_options_2d.html
+++ b/model_options_2d.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>2D model options &#8212; Thetis 0+untagged.2009.gb75eefa documentation</title>
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
+    <title>2D model options &#8212; Thetis 0+untagged.2054.ge07ddf2 documentation</title>
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css?v=0f3339d6" />
-    <script src="_static/documentation_options.js?v=47a7fef3"></script>
-    <script src="_static/doctools.js?v=888ff710"></script>
+    <script src="_static/documentation_options.js?v=70f0a730"></script>
+    <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script async="async" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
@@ -156,7 +156,7 @@ the 2D tracer SUPG stabilization scheme.</p>
 </dd>
 <dt>CommonModelOptions.<strong>nh_model_options</strong><span class="classifier">Instance</span></dt><dd><p>No description</p>
 <p>Default:</p>
-<p>&lt;thetis.options.NonhydrostaticModelOptions object at 0x7f900c15c790&gt;</p>
+<p>&lt;thetis.options.NonhydrostaticModelOptions object at 0x734ec7e569e0&gt;</p>
 </dd>
 <dt>CommonModelOptions.<strong>nikuradse_bed_roughness</strong><span class="classifier">FiredrakeScalarExpression</span></dt><dd><p>Nikuradse bed roughness length used to construct the 2D quadratic drag parameter <span class="math notranslate nohighlight">\(C_D\)</span>.</p>
 <blockquote>
@@ -286,7 +286,7 @@ diagnostics will be computed</p>
 </dd>
 <dt>ModelOptions2d.<strong>sediment_model_options</strong><span class="classifier">Instance</span></dt><dd><p>No description</p>
 <p>Default:</p>
-<p>&lt;thetis.options.SedimentModelOptions object at 0x7f900c12f950&gt;</p>
+<p>&lt;thetis.options.SedimentModelOptions object at 0x734e7de12b30&gt;</p>
 </dd>
 <dt>ModelOptions2d.<strong>swe_timestepper_type</strong><span class="classifier">‘SSPRK33’|’ForwardEuler’|’BackwardEuler’|’CrankNicolson’|’DIRK22’|’DIRK33’|’SteadyState’|’PressureProjectionPicard’|’SSPIMEX’</span></dt><dd><p>Name of the time integrator</p>
 <p>Default:</p>
@@ -538,8 +538,8 @@ If <code class="docutils literal notranslate"><span class="pre">True</span></cod
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
+    &#169; Copyright 2016-2025, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.1.3.
     </div>
   </body>
 </html>
